# nanoDiffGPT

./: .gitignore  README.md  model.py  pyproject.toml  sample.py  train.py
config/: train_shakespeare_char.py
data/shakespeare_char/: prepare.py
wandb/: latest-run
wandb/run-20250926_191433-phris1uy/: run-phris1uy.wandb
wandb/run-20250926_191433-phris1uy/files/: wandb-metadata.json
wandb/run-20250926_191824-dtbp8r9x/: run-dtbp8r9x.wandb
wandb/run-20250926_191824-dtbp8r9x/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250927_143103-ez344cta/: run-ez344cta.wandb
wandb/run-20250927_143103-ez344cta/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250927_154733-4xvc9p6o/: run-4xvc9p6o.wandb
wandb/run-20250927_154733-4xvc9p6o/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250927_183433-6my4gh6i/: run-6my4gh6i.wandb
wandb/run-20250927_183433-6my4gh6i/files/: wandb-metadata.json
wandb/run-20250927_184057-imaqrxoj/files/: wandb-metadata.json
wandb/run-20250927_184400-4du6dqde/files/: wandb-metadata.json
wandb/run-20250927_185201-acxso6qq/: run-acxso6qq.wandb
wandb/run-20250927_185201-acxso6qq/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250927_193444-0761a8pu/: run-0761a8pu.wandb
wandb/run-20250927_193444-0761a8pu/files/: config.yaml  wandb-metadata.json  wandb-summary.json
